# gradient-descent-gcs

./: CMakeLists.txt  LICENSE
include/: gcs.h
src/: gcs.c
tests/: test_gcs.c  test_memory.c
